# anaconda-channel-guide

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yaml  environment.yml  pyproject.toml  renovate.json
.github/: CODEOWNERS
.github/workflows/: ci.yaml  lint.yaml  tests.yaml  tests.yml
anaconda_channel_guide/: __init__.py  box.py  channel_check.py  hooks.py  plugin.py  prefetch.py  show.py
recipe/: meta.yaml
scripts/: benchmark.py
tests/: conftest.py  test_box.py  test_channel_check.py  test_handle_pnfe.py  test_hooks.py  test_plugin.py  test_prefetch.py
