[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "anaconda-channel-guide"
version = "0.1.0"
description = "A plugin that intercepts PackageNotFoundErrors and checks if the package exists in other channels."
requires-python = ">=3.10"
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy"
]
dependencies = [
  "conda",
]

[project.entry-points.conda]
anaconda-channel-guide = "anaconda_channel_guide.hooks"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
extend-per-file-ignores = {"tests/*" = ["S101"]}
select = [
  "A",    # flake8-builtins
  "ANN",  # flake8-annotations
  "ARG",  # flake8-unused-arguments
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "C90",  # mccabe
  "DTZ",  # flake8-datetimez
  "E",    # pycodestyle errors
  "ERA",  # eradicate
  "F",    # pyflakes
  "FA",   # flake8-future-annotations
  "G",    # flake8-logging-format
  "I",    # isort
  "ISC",  # flake8-implicit-str-concat
  "LOG",  # flake8-logging
  "N",    # flake8-naming
  "PIE",  # flake8-pie
  "PT",   # flake8-pytest-style
  "PTH",  # flake8-use-pathlib
  "Q",    # flake8-quotes
  "RUF",  # ruff-specific rules
  "S",    # flake8-bandit
  "SIM",  # flake8-simplify
  "TC",   # flake8-type-checking
  "T10",  # flake8-debugger
  "UP",   # pyupgrade
  "W",    # pycodestyle warnings
  "YTT",  # flake8-2020
]
