[build-system]
requires = ["hatchling>=1.12.2", "hatch-vcs>=0.2.0"]
build-backend = "hatchling.build"

[project]
name = "anaconda-channel-guide"
description = "A plugin that intercepts PackageNotFoundErrors and checks if the package exists in other channels."
requires-python = ">=3.10"
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy"
]
dependencies = [
    # Keep empty and add dependencies to pixi.toml
    # * pixi overrides dependencies from main with PyPi.
    # * Since conda is not on PyPi, this plug-in is not fully
    #   installable using pip anyway.
]
dynamic = ["version"]
readme = "README.md"

[project.entry-points.conda]
anaconda-channel-guide = "anaconda_channel_guide.hooks"

[tool.hatch.build.hooks.vcs]
version-file = "anaconda_channel_guide/_version.py"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "dirty-tag"

[tool.mypy]
warn_no_return = false

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["anaconda_channel_guide/_version.py"]

[tool.ruff.lint]
extend-per-file-ignores = {"tests/*" = ["S101"]}
select = [
  "A",    # flake8-builtins
  "ANN",  # flake8-annotations
  "ARG",  # flake8-unused-arguments
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "C90",  # mccabe
  "DTZ",  # flake8-datetimez
  "E",    # pycodestyle errors
  "ERA",  # eradicate
  "F",    # pyflakes
  "FA",   # flake8-future-annotations
  "G",    # flake8-logging-format
  "I",    # isort
  "ISC",  # flake8-implicit-str-concat
  "LOG",  # flake8-logging
  "N",    # flake8-naming
  "PIE",  # flake8-pie
  "PT",   # flake8-pytest-style
  "PTH",  # flake8-use-pathlib
  "Q",    # flake8-quotes
  "RUF",  # ruff-specific rules
  "S",    # flake8-bandit
  "SIM",  # flake8-simplify
  "TC",   # flake8-type-checking
  "T10",  # flake8-debugger
  "UP",   # pyupgrade
  "W",    # pycodestyle warnings
  "YTT",  # flake8-2020
]

[tool.pixi.workspace]
name = "anaconda-channel-guide"
channels = ["https://repo.anaconda.com/pkgs/main"]
platforms = ["linux-64", "linux-aarch64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
conda = ">=26.5.0"
python = ">=3.10"
requests = "*"
rich = "*"
anaconda-auth = "*"

[tool.pixi.pypi-dependencies]
"anaconda-channel-guide" = { path  = ".", editable = true }

[tool.pixi.tasks]
conda = { cmd = "python -m conda", env = { CONDA_CHANNELS = "defaults" } }

[tool.pixi.feature.build]
[tool.pixi.feature.build.dependencies]
conda-build = "*"

[tool.pixi.feature.build.tasks]
build = { cmd = "python -m conda build recipe", env = { CONDA_CHANNELS = "defaults" } }

[tool.pixi.feature.test]
[tool.pixi.feature.test.tasks]
test = "python -m pytest -vvv -ra"

[tool.pixi.feature.test.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
responses = "*"

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.feature.py314.dependencies]
python = "3.14.*"

[tool.pixi.environments]
build = ["build"]
dev = ["py310"]
test-py310 = ["test", "py310"]
test-py311 = ["test", "py311"]
test-py312 = ["test", "py312"]
test-py313 = ["test", "py313"]
test-py314 = ["test", "py314"]
